# changex-database-cpp

./: .gitignore  CMakeLists.txt
RedisModule/: CMakeLists.txt  redismanager.cpp  redismanager.h
RedisModule/include/: redisconnection.h  redisexpirationoperations.h  redisgenericoperations.h  redishashoperations.h  redislistoperations.h  redismanager.h  redismodule_export.h  redissetoperations.h  redissortedsetoperations.h  redisstringoperations.h  redistransactionoperations.h
RedisModule/operation/: redisbytesoperations.cpp  redisbytesoperations.h  redisexpirationoperations.cpp  redisexpirationoperations.h  redisgenericoperations.cpp  redisgenericoperations.h  redishashoperations.cpp  redishashoperations.h  redislistoperations.cpp  redislistoperations.h  redissetoperations.cpp  redissetoperations.h  redissortedsetoperations.cpp  redissortedsetoperations.h  redisstringoperations.cpp  redisstringoperations.h  redistransactionoperations.cpp  redistransactionoperations.h
RedisModule/src/: redisconnection.cpp  redisexpirationoperations.cpp  redisgenericoperations.cpp  redishashoperations.cpp  redislistoperations.cpp  redismanager.cpp  redissetoperations.cpp  redissortedsetoperations.cpp  redisstringoperations.cpp  redistransactionoperations.cpp
RedisModule/tool/: redisconnection.cpp  redisconnection.h  redisoperationsbase.cpp  redisoperationsbase.h
cmake/: 3rdparty.cmake  CopyIfMissing.cmake  build_options.cmake
doc/: CPP头文件注释添加任务.md  DEPLOYMENT.md  PROJECT_ARCHITECTURE.md  PROJECT_OVERVIEW.md  aa.md  bb.md  plan.md
example/: CMakeLists.txt
example/base_examples/: CMakeLists.txt  main.cpp  workflow.cpp  workflow.h
example/base_examples/demos/: basic_string_demo.cpp  basic_string_demo.h  expiration_demo.cpp  hash_demo.cpp  leaderboard_example.cpp  leaderboard_example.h  list_demo.cpp  list_demo.h  set_demo.cpp  sorted_set_demo.cpp  user_profile_example.cpp
example/base_examples/doc/: BASIC_EXAMPLES_GUIDE.md  REFACTOR_SUMMARY.md
example/demos/: basic_string_demo.cpp  expiration_demo.cpp  expiration_demo.h  hash_demo.h  leaderboard_example.cpp  list_demo.cpp  set_demo.h  sorted_set_demo.h  user_profile_example.cpp  user_profile_example.h
example/image_management/: CMakeLists.txt  IMAGE_MANAGEMENT_GUIDE.md  main.cpp  workflow.cpp  workflow.h
example/image_management/demos/: image_management_demo.cpp  image_management_demo.h  image_model_demo.cpp  image_model_demo.h  image_retrieve_demo.cpp  image_retrieve_demo.h  image_search_demo.cpp  image_search_demo.h  image_upload_demo.cpp  image_upload_demo.h
example/image_management/src/: image_manager.cpp  image_manager.h  image_model.cpp  image_model.h
example/redis_examples/: CMakeLists.txt  main.cpp
example/redis_examples/models/: image_model.cpp  image_model.h
example/redis_examples/repositories/: image_repository.cpp  image_repository.h
example/redis_examples/scenarios/: image_scenarios.cpp  image_scenarios.h
scripts/: setup_3rdparty.sh
tests/: CMakeLists.txt  generate_report.sh
tests/benchmarks/: tst_bytesbenchmark.cpp  tst_stringbenchmark.cpp
tests/fixtures/: redistestfixture.cpp  redistestfixture.h
tests/persistence/: CMakeLists.txt  tst_aofpersistence.cpp  tst_rdbpersistence.cpp
tests/scripts/: generate_markdown_report.sh  run_all_persistence.sh  run_aof_test.sh  run_benchmark.sh  run_rdb_test.sh
tests/scripts/lib/: common.sh  redis_utils.sh
